# AIAmplitudes_common_public

./: .gitignore  pyproject.toml
src/aiamplitudes_common/: __init__.py  commonclasses.py  fbspaces.py  file_readers.py  polynomial_utils.py  preprocessing.py
src/aiamplitudes_common_public/: fbspaces.py  file_readers.py  rels_utils.py
