[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aiamplitudes-common"
dynamic = ["version"]
authors = [
  { name="Garrett Merz", email="garrett.merz@wisc.edu" },
  { name="Francois Charton", email="fcharton@meta.com" },
  { name="Tianji Cai", email="tianjiresearch@gmail.com" },
  { name="Kyle Cranmer", email="kscranmer@wisc.edu" },
  { name="Matthias Wilhelm", email="mailmwilhelm@imada.sdu.dk" },
  { name="Lance Dixon", email="lance@slac.stanford.edu" },
]
description = "A library of common utils for the AI Amplitudes project"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies=[
  "wandb==0.15.8",
  "pillow==9.4.0",
  "pandas==2.0.3",
  "numpy==1.24.1",
  "tensorboard==2.12.3",
  "matplotlib==3.7.1",
  "sympy==1.13.1",
  "scipy==1.10.1",
  "einops==0.7.0",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "torchaudio==2.5.1",
  "torchmetrics==1.6.0",
]

[project.urls]
Homepage = "https://github.com/AIAmplitudes"

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/aiamplitudes_common/_version.py"

[tool.hatch.build.targets.sdist]
# hatchling always includes:
# pyproject.toml, .gitignore, any README, any LICENSE, AUTHORS
only-include = [
    "/src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/aiamplitudes_common"]
